<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2">

    <!-- Row 1 -->
    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/row_1_text"
        android:textSize="30dp"/>

    <ImageButton
        android:layout_row="0"
        android:layout_column="1"
        android:src="@drawable/flag"
        android:contentDescription="American Flag"/>

    <!-- Row 2 -->
    <Switch
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/switch_text"/>

    <!-- Row 3 -->
    <Button
        android:id="@+id/button"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/button_text" />
    />

    <CheckBox
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/checkbox_text"/>

    <!-- Row 4 -->
    <EditText
        android:id="@+id/editText"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/edittext_hint"/>

</GridLayout>