<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Row 1 -->
    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row_1_text"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:contentDescription="American Flag"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/TextView"/>

    <!-- Row 2 -->
    <Switch
        android:id="@+id/swi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_text"
        app:layout_constraintTop_toBottomOf="@id/TextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Row 3 -->
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text" />
    app:layout_constraintTop_toBottomOf="@id/swi"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_text"
        app:layout_constraintTop_toBottomOf="@id/swi"
        app:layout_constraintStart_toEndOf="@id/button"/>

        <!-- Row 4 -->
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_hint"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>